--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -67,8 +67,6 @@ jobs:
           git add guyrenny/test
           git status
           git diff
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
       # Commit all changed files back to the repository
       - uses: planetscale/ghcommit-action@v0.1.19
@@ -78,4 +76,4 @@ jobs:
           branch: master
           file_pattern: '*.yaml *.md'
         env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          GITHUB_TOKEN: ${{secrets.GH_TOKEN}}
