--- a/aws-integrations/lambda-integrations/cloudtrail/template.yaml
+++ b/aws-integrations/lambda-integrations/cloudtrail/template.yaml
@@ -6,7 +6,7 @@ Description: Send CloudTrail logs from S3 bucket to Coralogix.
 Metadata:
   AWS::ServerlessRepo::Application:
     Name: Coralogix-CloudTrail
-    Description: Send CloudTrail logs from S3 bucket to Coralogix..
+    Description: Send CloudTrail logs from S3 bucket to Coralogix.
     Author: Coralogix
     SpdxLicenseId: Apache-2.0
     LicenseUrl: LICENSE
