--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -1,79 +1,154 @@
-# name: Template Sync
+name: Sync integration-definitions
 
-# on:
-#   workflow_dispatch:
-#   push:
-#     # branches: [master, main, dev]
-#     paths:
-#       - "template.*"
-#       - "README.md"
-#       - ".github/workflows/sync.yml"
+on: 
+  push:
+    branches: [master, main]
+    paths:
+      - "**/template.yaml"
+jobs:
+  upload_files:
+    runs-on: ubuntu-latest
+    name: upload files
+    env:
+      integration_list: "s3,s3-sns,cloudtrail,cloudtrail-sns,cloudwatch-logs,vpc-flow-logs,firehose-logs,firehose-metrics,resource-metadata,aws-shipper-lambda"
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 
 
-# env:
-#   # REPO_BUCKET_PREFIX: coralogix-serverless-repo
-#   # REPO_PACKAGE_ZIP: coralogix-aws-serverless.rust.zip
-#   CLOUDFORMATION_REPO: guyrenny/test
-#   # CFN_INTEGRATION_DIR: aws-integrations/aws-rust-lambda
+      - name: Create template-directory and changed-integration-file
+        run: |
+          mkdir template-directory
+          touch changed-integration.txt
 
-# jobs:
-#   get-template:
-#     runs-on: ubuntu-latest    
-#     steps:
-#       - uses: actions/checkout@v3
-#       - name: store artifacts
-#         uses: actions/upload-artifact@v3
-#         with:
-#           name: store
-#           path: |
-#             ./template.yaml
-#             ./README.md
-#       - name: store artifacts
-#         uses: actions/upload-artifact@v3
-#         with:
-#           name: stored
-#           path: |
-#             ./template.yaml
-#             ./README.md
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v37
 
+      - name: Move integrations files
+        run: |
+          changed_files_string="${{ steps.changed-files.outputs.all_changed_files }}"
+          read -ra changed_files_array <<< "$changed_files_string"
 
-#   sync-changes:
-#     runs-on: ubuntu-latest
-#     permissions:
-#       contents: write
-#     needs: get-template
-#     steps:
-#       - name: checkout destination repository
-#         uses: actions/checkout@v3
-#         with:
-#           repository: ${{ env.CLOUDFORMATION_REPO }}
-#           token: ${{ secrets.GH_TOKEN }}
+          for changed_file in "${changed_files_array[@]}"; do
+            integration=$(echo "$changed_file" | xargs -n1 dirname | xargs -n1 basename)
+            if [[ $changed_file == **"/$integration/template.yaml" ]]; then
+              if echo "$integration_list" | grep -q "$integration"; then
+                mv $changed_file template-directory/${integration}-template.yaml
+                echo $integration >> changed-integration.txt
+              fi
+            fi
+          done
+          if [ -z "$(ls -A "./template-directory")" ]; then
+            echo "[INFO] No file in the integrations list where changed."
+            exit 1
+          fi
 
-#       - run: mkdir .tmp
+      - name: Upload template-directory
+        uses: actions/upload-artifact@v3
+        with:
+          name: template-directory
+          path: ./template-directory/
 
-#       - name: download template
-#         uses: actions/download-artifact@v3
-#         with:
-#           name: store
-#           path: .tmp
-        
-#       - run: sudo snap install yq
-#       - name: push files
-#         run: |
-#           mkdir -p guyrenny/test
-#           # cat .tmp/template.yaml | yq '.Resources.LambdaFunction.Properties.CodeUri = "s3://${{ env.REPO_BUCKET_PREFIX }}-${AWS::Region}/${{ env.REPO_PACKAGE_ZIP }}"' > ${{ env.CFN_INTEGRATION_DIR }}/template.yaml
-#           # cat ${{ env.CFN_INTEGRATION_DIR }}/template.yaml | grep -i codeuri
-          
-#           mv -v .tmp/README.md guyrenny/test/README.md
-#           git add guyrenny/test
-#           git status
-#           git diff
+      - name: Upload changed-integration
+        uses: actions/upload-artifact@v3
+        with:
+          name: changed-integration
+          path: ./changed-integration.txt
+  
+      - name: Upload replace_template script
+        uses: actions/upload-artifact@v3
+        with:
+          name: replace_template
+          path: scripts/replace_template.sh
 
-#       # Commit all changed files back to the repository
-#       - uses: planetscale/ghcommit-action@v0.1.19
-#         with:
-#           commit_message: "syncing change from github.com/coralogix/coragix-aws-serverless-rust, ${{ github.event.head_commit.message }}"
-#           repo: guyrenny/test
-#           branch: master
-#           file_pattern: '*.yaml *.md'
-#         env:
-#           GITHUB_TOKEN: ${{secrets.GH_TOKEN}}
+  create_pr:
+    runs-on: ubuntu-latest
+    needs: upload_files
+    steps:
+
+      - name: Checkout destination repository
+        uses: actions/checkout@v3
+        with:
+          repository: guyrenny/test
+          token: ${{ secrets.DESTINATION_REPO_TOKEN }}
+
+      - name: Create template-directory
+        run: mkdir ./template-directory
+
+      - name: Download template-directory
+        uses: actions/download-artifact@v3
+        with:
+          name: template-directory
+          path: ./template-directory
+    
+      - name: Download replace_template file
+        uses: actions/download-artifact@v3
+        with:
+          name: replace_template
+          path: ./
+
+      - name: Download changed-integration file
+        uses: actions/download-artifact@v3
+        with:
+          name: changed-integration
+          path: ./
+
+      - name: apply changes to the files
+        run: |
+          if echo "${{ github.event.head_commit.message }}" | tr '\n' ' ' | grep -Eq '(#\d+)'; then
+            branch_name=$(echo "${{ github.event.head_commit.message }}" | grep -Epo '(#\d+)')
+          else
+            branch_name=update_integration_branch
+          fi
+          echo "branch_name: ${branch_name}"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git remote update
+          git fetch
+          git pull origin master
+          git branch ${branch_name}
+          git checkout ${branch_name}
+          sync_branch_exists=$(git ls-remote --heads origin "${branch_name}" | wc -l)
+          if [[ $sync_branch_exists -ne 0 ]]; then
+            git pull origin ${branch_name} --rebase
+          fi
+          chmod +x replace_template.sh
+          while read line; do  
+            ./replace_template.sh template-directory/${line}-template.yaml
+            template_version=$(cat template-directory/${line}-template.yaml | grep "SemanticVersion" | grep -oE '[^ ]+$')
+            mkdir -p integrations/${line}/v${template_version}
+            mv template-directory/${line}-template.yaml integrations/${line}/v${template_version}/template.yaml
+            
+            if [ -f integrations/${line}/manifest.yaml ]; then
+              echo "  - revision: ${template_version}
+              template: !CloudFormationTemplate v${template_version}/template.yaml
+              field_definitions: v${template_version}/fields.yaml" >> integrations/${line}/manifest.yaml
+            fi
+
+          done < changed-integration.txt
+
+          rm replace_template.sh
+          rm -rf template-directory
+          rm changed-integration.txt
+          git add .
+          git commit -m "Copy file from cloudformation repository"
+          git push --set-upstream origin ${branch_name}
+
+      - name: Create pull request
+        run: |
+          if echo "${{ github.event.head_commit.message }}" | tr '\n' ' ' | grep -Eq '(#\d+)'; then
+            branch_name=$(echo "${{ github.event.head_commit.message }}" | grep -Epo '(#\d+)')
+            Pr_name=$(echo "${{ github.event.head_commit.message }}" | grep -E '(#\d+)')
+          else
+            branch_name=update_integration_branch
+            Pr_name=$(echo "${{ github.event.head_commit.message }}" | grep -E '(#\d+)')
+          fi
+          pr_exists=$(gh pr list --base master --head "${branch_name}" --json number -q '.[].number')
+          if [[ -n "$pr_exists" ]]; then
+            echo "Pull request already exists: #$pr_exists"
+          else
+            gh pr create --base master --head "${branch_name}" --title "${Pr_name}" --body "This pull request syncs the changes from the cloudformation repo to this repo."
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.DESTINATION_REPO_TOKEN }}
