--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -99,7 +99,8 @@ jobs:
       - name: apply changes to the files
         run: |
           if echo "${{ github.event.head_commit.message }}" | tr '\n' ' ' | grep -Eq '(#\d+)'; then
-            branch_name=branch$(echo "${{ github.event.head_commit.message }}" | grep -Epo '(#\d+)')
+            branch_name=branch-$(echo "${{ github.event.head_commit.message }}" | grep -Epo '(#\d+)')
+            echo number
           elif echo "${{ github.event.head_commit.message }}" | grep -q "#"; then
             branch_name=$(echo "${{ github.event.head_commit.message }}" | cut -d '#' -f 2)
           else
@@ -139,7 +140,8 @@ jobs:
       - name: Create pull request
         run: |
           if echo "${{ github.event.head_commit.message }}" | tr '\n' ' ' | grep -Eq '(#\d+)'; then
-            branch_name=brach$(echo "${{ github.event.head_commit.message }}" | grep -Epo '(#\d+)')
+            branch_name=brach-$(echo "${{ github.event.head_commit.message }}" | grep -Epo '(#\d+)')
+            echo number
             Pr_name=$(echo "${{ github.event.head_commit.message }}" | grep -E '(#\d+)')
           elif echo "${{ github.event.head_commit.message }}" | grep -q "#"; then
             branch_name=$(echo "${{ github.event.head_commit.message }}" | cut -d '#' -f 2)
