--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -98,7 +98,7 @@ jobs:
 
       - name: apply changes to the files
         run: |
-          if $(echo "$string" | grep -oE '[0-9]+'); then
+          if $(echo "${{ github.event.head_commit.message }}" | grep -oE '[0-9]+'); then
             branch_name=branch-$(echo "${{ github.event.head_commit.message }}" | grep -oE '[0-9]+')
             echo number
           elif echo "${{ github.event.head_commit.message }}" | grep -q "#"; then
@@ -139,7 +139,7 @@ jobs:
 
       - name: Create pull request
         run: |
-          if $(echo "$string" | grep -oE '[0-9]+'); then
+          if $(echo "${{ github.event.head_commit.message }}" | grep -oE '[0-9]+'); then
             branch_name=brach-$(echo "${{ github.event.head_commit.message }}" | grep -oE '[0-9]+')
             echo number
             Pr_name=$(echo "${{ github.event.head_commit.message }}" | grep -E '(#\d+)')
