--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -103,6 +103,7 @@ jobs:
             echo number
           elif echo "${{ github.event.head_commit.message }}" | grep -q "#"; then
             branch_name=$(echo "${{ github.event.head_commit.message }}" | cut -d '#' -f 2)
+            echo ${{ github.event.head_commit.message }}
           else
             branch_name=update_integration-branch
           fi
