--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -99,7 +99,7 @@ jobs:
       - name: apply changes to the files
         run: |
           if $(echo "${{ github.event.head_commit.message }}" | grep -oE '[0-9]+'); then
-            branch_name="${{ github.event.head_commit.message }}" | grep -oE '[0-9]+')"
+            branch_name=$(echo "${{ github.event.head_commit.message }}" | grep -oE '[0-9]+')
             echo number
           elif echo "${{ github.event.head_commit.message }}" | grep -q "#"; then
             branch_name=$(echo "${{ github.event.head_commit.message }}" | cut -d '#' -f 2)
