--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -140,6 +140,7 @@ jobs:
 
       - name: Create pull request
         run: |
+          set -x
           if [[ $(echo "${{ github.event.head_commit.message }}" | grep -oE '[0-9]+') ]]; then
             branch_name=brach-$(echo "${{ github.event.head_commit.message }}" | grep -oE '[0-9]+')
             echo number
