--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -143,8 +143,9 @@ jobs:
           set -x
           if [[ $(echo "${{ github.event.head_commit.message }}" | grep -oE '[0-9]+') ]]; then
             branch_name=brach-$(echo "${{ github.event.head_commit.message }}" | grep -oE '[0-9]+')
-            echo number
+            echo $branch_name
             Pr_name=$(echo "${{ github.event.head_commit.message }}" | grep -E '(#\d+)')
+            echo $Pr_name
           elif echo "${{ github.event.head_commit.message }}" | grep -q "#"; then
             branch_name=$(echo "${{ github.event.head_commit.message }}" | cut -d '#' -f 2)
             Pr_name=$(echo "${{ github.event.head_commit.message }}" | cut -d '#' -f 1)
