--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -144,7 +144,7 @@ jobs:
           if [[ $(echo "${{ github.event.head_commit.message }}" | grep -oE '[0-9]+') ]]; then
             branch_name=brach-$(echo "${{ github.event.head_commit.message }}" | grep -oE '[0-9]+')
             echo $branch_name
-            Pr_name=$(echo "${{ github.event.head_commit.message }}" | grep -E '(#\d+)')
+            Pr_name=$(echo "${{ github.event.head_commit.message }}" | | awk '{sub(/ *\(#[0-9]+\)/, ""); print}')
             echo $Pr_name
           elif echo "${{ github.event.head_commit.message }}" | grep -q "#"; then
             branch_name=$(echo "${{ github.event.head_commit.message }}" | cut -d '#' -f 2)
