--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -2,15 +2,13 @@ name: Sync integration-definitions
 
 on: 
   push:
-    branches: [master, main]
-    paths:
-      - "**/template.yaml"
+
 jobs:
   upload_files:
     runs-on: ubuntu-latest
     name: upload files
     env:
-      integration_list: "s3,s3-sns,cloudtrail,cloudtrail-sns,cloudwatch-logs,vpc-flow-logs,firehose,aws-shipper-lambda"
+      integration_list: "s3,s3-sns,cloudtrail,cloudtrail-sns,cloudwatch-logs,vpc-flow-logs,firehose,coraloigx-aws-shipper"
     steps:
       - uses: actions/checkout@v3
         with:
@@ -47,19 +45,19 @@ jobs:
           fi
 
       - name: Upload template-directory
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: template-directory
           path: ./template-directory/
 
       - name: Upload changed-integration
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: changed-integration
           path: ./changed-integration.txt
   
       - name: Upload replace_template script
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: replace_template
           path: ./scripts/replace_template.sh
@@ -99,7 +97,7 @@ jobs:
       - name: apply changes to the files
         run: |
           if [[ $(echo "${{ github.event.head_commit.message }}" | grep -oE '[0-9]+') ]]; then
-            branch_name=$(echo "${{ github.event.head_commit.message }}" | grep -oE '[0-9]+')
+            branch_name=branch-$(echo "${{ github.event.head_commit.message }}" | grep -oE '[0-9]+')
             echo number
           elif echo "${{ github.event.head_commit.message }}" | grep -q "#"; then
             branch_name=$(echo "${{ github.event.head_commit.message }}" | cut -d '#' -f 2)
@@ -156,8 +154,7 @@ jobs:
           if [[ -n "$pr_exists" ]]; then
             echo "Pull request already exists: #$pr_exists"
           else
-            branch_name=branch_new
-            gh pr create --base master --head "${branch_name}" --title "${Pr_name}" --body "This pull request syncs the changes from the cloudformation repo to this repo."
+            gh pr create --base master --head "${branch_name}" --title "test2" --body "This pull request syncs the changes from the cloudformation repo to this repo."
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.DESTINATION_REPO_TOKEN }}
