--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -110,6 +110,7 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git pull origin master
           git checkout -b ${branch_name}
+          git push --set-upstream origin ${branch_name}
           sync_branch_exists=$(git ls-remote --heads origin "${branch_name}" | wc -l)
           if [[ $sync_branch_exists -ne 0 ]]; then
             git pull origin ${branch_name} --rebase
