--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -86,8 +86,8 @@ jobs:
           echo $branch_name
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git pull
           git checkout -b ${branch_name}
+          git pull origin master
           git push --set-upstream origin ${branch_name}
 
       - name: Create template-directory
