--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -86,9 +86,11 @@ jobs:
           echo $branch_name
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git pull
+          git pull origin master
+          git pull origin ${branch_name}
           git checkout -b ${branch_name}
-          git pull
+          git pull origin master
+          git pull origin ${branch_name}
           git push --set-upstream origin ${branch_name}
 
       - name: Create template-directory
