--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -88,8 +88,7 @@ jobs:
           git remote update
           git fetch
           git pull origin master
-          git branch ${branch_name}
-          git checkout ${branch_name}
+          git checkout -b ${branch_name}
           git add .
           git push --set-upstream ${branch_name}
 
