--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -95,6 +95,7 @@ jobs:
           path: ./
 
       - name: apply changes to the files
+        id: set_output
         run: |
           if [[ $(echo "${{ github.event.head_commit.message }}" | grep -oE '[0-9]+') ]]; then
             branch_name=branch-$(echo "${{ github.event.head_commit.message }}" | grep -oE '[0-9]+')
@@ -134,10 +135,10 @@ jobs:
           rm -rf template-directory
           rm changed-integration.txt
           git add .
-          export branch_name=${branch_name}
+          echo "MyValue" >> $GITHUB_ENV
 
       - name: dont use
-        run: echo ${branch_name}
+        run: echo "The value is ${{ steps.set_output.outputs.myOutput }}"
 
       # - name: commit change
       #   uses: planetscale/ghcommit-action@v0.1.19
