--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -95,7 +95,6 @@ jobs:
           path: ./
 
       - name: apply changes to the files
-        id: set_output
         run: |
           if [[ $(echo "${{ github.event.head_commit.message }}" | grep -oE '[0-9]+') ]]; then
             branch_name=branch-$(echo "${{ github.event.head_commit.message }}" | grep -oE '[0-9]+')
@@ -135,10 +134,11 @@ jobs:
           rm -rf template-directory
           rm changed-integration.txt
           git add .
-          echo "MyValue" >> $GITHUB_ENV
 
-      - name: dont use
-        run: echo "The value is ${{ steps.set_output.outputs.myOutput }}"
+      - name: Set env
+        run: echo "GITHUB_SHA_SHORT=test" >> $GITHUB_ENV
+      - name: Test
+        run: echo $GITHUB_SHA_SHORT
 
       # - name: commit change
       #   uses: planetscale/ghcommit-action@v0.1.19
