--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -141,15 +141,15 @@ jobs:
       - name: Test
         run: echo $branch_name
 
-      # - name: commit change
-      #   uses: planetscale/ghcommit-action@v0.1.19
-      #   with:
-      #     commit_message: "Copy file from cloudformation repository"
-      #     repo: guyrenny/test
-      #     branch: ${branch_name}
-      #     file_pattern: '*.yaml *.md'
-      #   env:
-      #     GITHUB_TOKEN: ${{secrets.DESTINATION_REPO_TOKEN}}
+      - name: commit change
+        uses: planetscale/ghcommit-action@v0.1.19
+        with:
+          commit_message: "Copy file from cloudformation repository"
+          repo: guyrenny/test
+          branch: ${branch_name}
+          file_pattern: '*.yaml *.md'
+        env:
+          GITHUB_TOKEN: ${{secrets.DESTINATION_REPO_TOKEN}}
 
       - name: Create pull request
         run: |
