--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -2,7 +2,9 @@ name: Sync integration-definitions
 
 on: 
   push:
-
+    branches: [master, main, guyrenny-patch-1]
+    paths:
+      - "**/template.yaml"
 jobs:
   upload_files:
     runs-on: ubuntu-latest
