--- a/aws-integrations/aws-shipper-lambda/template.yaml
+++ b/aws-integrations/aws-shipper-lambda/template.yaml
@@ -4,7 +4,7 @@ Description: Send logs to Coralogix from AWS, (S3, SNS, Cloudwatch and more)
 Metadata:
   AWS::ServerlessRepo::Application:
     Name: Coralogix-Logs
-    Description: Send logs to Coralogix.
+    Description: Send logs to Coralogix another test..
     Author: Coralogix
     SpdxLicenseId: Apache-2.0
     LicenseUrl: LICENSE
@@ -27,7 +27,6 @@ Metadata:
           - CustomDomain
           - ApplicationName
           - SubsystemName
-          - ApiKey
           - StoreAPIKeyInSecretsManager
       - Label:
           default: Integration S3 configuration
@@ -37,6 +36,7 @@ Metadata:
           - S3KeySuffix
           - NewlinePattern
           - SNSTopicArn
+          - ApiKey
       - Label:
           default: Integration Cloudwatch configuration
         Parameters:
