--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -98,7 +98,7 @@ jobs:
 
       - name: apply changes to the files
         run: |
-          if [[ $(echo "${{ github.event.head_commit.message }}" | grep -oE '[0-9]+') ]]; then
+          if [[ $(echo "${{ github.event.head_commit.message }}" | grep -oE '\(\#[0-9]+') ]]; then
             branch_name=branch-$(echo "${{ github.event.head_commit.message }}" | grep -oE '[0-9]+')
             echo number
           elif echo "${{ github.event.head_commit.message }}" | grep -q "#"; then
@@ -151,7 +151,7 @@ jobs:
 
       - name: Create pull request
         run: |
-          if [[ $(echo "${{ github.event.head_commit.message }}" | grep -oE '[0-9]+') ]]; then
+          if [[ $(echo "${{ github.event.head_commit.message }}" | grep -oE '\(\#[0-9]+') ]]; then
             branch_name=branch-$(echo "${{ github.event.head_commit.message }}" | grep -oE '[0-9]+')
             echo $branch_name
             Pr_name=$(echo "${{ github.event.head_commit.message }}" | awk '{sub(/ *\(#[0-9]+\)/, ""); print}')
