--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -118,7 +118,7 @@ jobs:
           git switch -c ${branch_name} --track origin/master   
           echo switch
           pr_exists=$(gh pr list --base master --head "${branch_name}" --json number -q '.[].number')
-          if [[ -n "$pr_exists" ]]; then
+          if [[ "$pr_exists" ]]; then
             git push --set-upstream origin ${branch_name}
           fi
           sync_branch_exists=$(git ls-remote --heads origin "${branch_name}" | wc -l)
